tests/fixtures/invalid/pow_dict_bool_int.py
# Cannot call pow() with Dict[str, int], Bool, Int
x = pow({"a": 1}, True, 1)
